--- a/veebileht/style.css
+++ b/veebileht/style.css
@@ -2,14 +2,14 @@
 	font-family: Effloresce;
     src: url("EFFLORES.ttf");
 }
-
 @font-face {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
     background-image: url("./pildid/taust.jpg");
-    padding-left: 10px;
+    background-position: center top;
+    background-attachment: fixed;
 }
 h1 {
 	font-family: Effloresce;
@@ -17,9 +17,28 @@ h1 {
     margin-top: 0px;
     text-align: center;   
 }
+
+h2 {
+	font-family: Effloresce;
+	font-size: 60px;
+    text-align: center;
+}
+h3 {
+    font-family: Effloresce;
+    font-size: 30px;
+    text-align: center;
+}
+p {
+    font-family: Effloresce;
+    font-size: 20px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
 .main-div {
     display: flex;
 }
+
 .button-div {
     font-family: Verdana;
     margin-top: 30px;
@@ -71,9 +90,9 @@ h1 {
 }
     
 .image-holder {
-    width: 2500px;
+    width: 2400px;
     background-color: red;
-    height: 450px;
+    height: 350px;
     clear: both;
     position: relative;
     
@@ -110,7 +129,7 @@ h1 {
 
 .button-holder {
     position: relative;
-    top: -480px;
+    top: -20px;
 }
 
 .slider-change {
@@ -227,3 +246,42 @@ h1 {
     background-color: purple;
     color: white
 }
+
+a.control_prev, a.control_next {
+    position: center;
+    top: 40%;
+    z-index: 999;
+    display: flex;
+    padding: 4% 3%;
+    width: auto;
+    height: auto;
+    background: #2a2a2a;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+    opacity: 0.8;
+    cursor: pointer;
+}
+  
+a.control_prev:hover, a.control_next:hover {
+    opacity: 1;
+    -webkit-transition: all 0.2s ease;
+}
+  
+a.control_prev {
+    border-radius: 0 2px 2px 0;
+}
+  
+a.control_next {
+    right: 0;
+    border-radius: 2px 0 0 2px;
+}
+  
+.slider_option {
+    position: relative;
+    margin: 10px auto;
+    width: 160px;
+    font-size: 18px;
+}
+  
