--- a/veebileht/style.css
+++ b/veebileht/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Effloresce;
-    src: url("EFFLORES.ttf");
+    src: url("EFFLORES.TTF");
 }
 @font-face {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
